tried hiding overflow x to fix the phone scaling issue with some phones and bigger system font

--- a/header.css
+++ b/header.css
@@ -1,3 +1,7 @@
+div {
+  overflow: hidden;
+}
+
 .header {
   display: flex;
   flex-direction: row;
