--- a/index.css
+++ b/index.css
@@ -138,6 +138,7 @@ a:visited {
   display: flex;
   justify-content: space-evenly;
   gap: 20px;
+  margin-right: 10px;
 }
 
 .column {
